tests/specs/ecosystem/bureaudouble/outils/0_0_1.test
bureaudouble/outils/0.0.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'Document'.
const getDocument: () => Document = {} as never;
                         ~~~~~~~~
    at file://<tmpdir>/convertToPlain.ts:1:26

TS2304 [ERROR]: Cannot find name 'Plugin'.
  plugins: Plugin[];
           ~~~~~~
    at file://<tmpdir>/createRenderPipe.ts:27:12

Found 2 errors.

